update name, description, author

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@tammytran/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "A mini clone of the [Lodash](https:/lodash.com) library",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "test"
@@ -14,7 +14,10 @@
     "url": "git+https://github.com/ohoktnt/lotide.git"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Tammy Tran",
+    "email": "tammy.n.tran@gmail.com"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ohoktnt/lotide/issues"
